--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Website</title>
+    <title>mjsthoughts</title>
     <style>
         body {
             font-family: Garamond;
@@ -13,7 +13,6 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
     
     <p>the thought of 4 more years of trump sucks. i dread waking up daily with the glaring hyperawareness that the american zeitgeist has not evolved out of its disgusting shell of bigotry. i hold a deep, 
 putrid hate for misogynists, racists, xenophobes, and anyone whose concious or subconscious mind believes in stripping other human beings of their humanity. i pity those who couldn't possibly muster
