--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {
             font-family: Garamond;
-            line-height: 1.6;
+            line-height: 1.5;
             max-width: 700px;
             margin: 0 auto;
             padding: 20px;
@@ -13,9 +13,11 @@
     </style>
 </head>
 <body>
+
+    <p>sigh.</p>
     
-    <p>the thought of four more years of trump sucks. i dread waking up daily with the glaring hyperawareness that the american zeitgeist has not evolved out of its disgusting shell of bigotry. i hold a deep, 
-putrid hate for misogynists, racists, xenophobes, and anyone whose concious or subconscious mind believes in stripping other human beings of their humanity. i pity those who couldn't possibly muster
+    <p>the thought of four more years of trump sucks. i dread waking up daily with an unforgiving hyperawareness that the american zeitgeist has not evolved out of its disgusting shell of bigotry. i hold a deep, 
+profound hate for misogynists, racists, xenophobes, and anyone whose concious or subconscious mind believes in stripping other human beings of their humanity. and i pity those who couldn't possibly muster
 enough agency (a low bar) to vote against evil simply because their comfort is too easy to attach themselves to. <p>
 
     <p>i am not a conspiracist, and have always practiced calculated optimism (i will continue to do so). although i am now reminded that progressivism is not gaining the traction i thought it was, i dont believe 
