--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <p>sigh.</p>
     
-    <p>the thought of four more years of trump sucks. i dread waking up daily with an unforgiving hyperawareness that the american zeitgeist has not evolved out of its disgusting shell of bigotry. i hold a deep, 
+    <p>the thought of four more years of trump sucks. i dread waking up daily with a hyperawareness that the american zeitgeist has not evolved out of its disgusting shell of bigotry. i hold a deep, 
 profound hate for misogynists, racists, xenophobes, and anyone whose concious or subconscious mind believes in stripping other human beings of their humanity. and i pity those who couldn't possibly muster
 enough agency (a low bar) to vote against evil simply because their comfort is too easy to attach themselves to. <p>
 
