--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ global intolerance and unironically sets back social progress by a significant f
 hidden currents of our social fabric. each step forward in civil rights and social progress seems to be met with some dark fantasy that exhausts the spirit of those fighting for change. </p>
   
     <p>whats particularly wearing is watching the normalization of rhetoric and behavior that is objectively rotten. now more than ever, it seems like select adults cultivate -- quite literally, and often intentionally -- the 
-growth of this noxious rhetoric in communities that are most susceptible to it. in unaware hyper-masculine groups, among impressionable youth, even in the funneled minds of techno-optimists and delusional elon fanboys. 
+growth of this noxious rhetoric in communities that are most susceptible to it. in incel-fueled hyper-masculine groups, among impressionable youth, even in the funneled minds of techno-optimists and delusional elon fanboys. 
 the emboldening of those who would openly express prejudice is normalized under a trump administration. the very notion of truth and expertise has become partisan territory, with facts themselves now subject 
 to tribal allegiance rather than objective verification. and this is in part due to the laziness of the fried minds who are too dopamine-addicted and fatigued to see themselves in the third person and realize 
 their own cognitive dissonance. and again, perhaps whats most troubling is not the loud voices of opposition, but the quiet acquiescence of those who know better -- those who recognize the danger but choose 
